--- a/ProactiveLaw2/www/templates/chat.html
+++ b/ProactiveLaw2/www/templates/chat.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Proactive Law">
   <ion-pane class="messaging-view">
     <ion-header-bar class="bar-calm">
-      <h1 class="title">Proactive Law</h1>
+      <h1 class="title">Proactive Lawx</h1>
     </ion-header-bar>
 
     <ion-content class="content-stable"
@@ -13,10 +13,10 @@
            class="messages">
 
         <div class="message" ng-class="{'slide-right': hideTime, '': !hideTime}">
-          <span>{{ message.text }}</span>
+          <div>{{ message.text }}</div>
         </div>
 
-        <div class="time" ng-class="{'slide-right': hideTime, '': !hideTime}">seen</div>
+        <!-- <div class="time" ng-class="{'slide-right': hideTime, '': !hideTime}">seen</div> -->
 
 
       </div>
