--- a/ProactiveLaw2/www/templates/menu.html
+++ b/ProactiveLaw2/www/templates/menu.html
@@ -12,25 +12,25 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left">
+  <ion-side-menu side="left" class="test-side">
     <ion-header-bar class="bar-stable">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close href="#/app/search">
+        <ion-item menu-close href="#/app/search" class="test-side-item">
           Chat
         </ion-item>
-        <ion-item menu-close href="#/app/citations">
+        <ion-item menu-close href="#/app/citations" class="test-side-item">
           Citations
         </ion-item>
-        <ion-item menu-close href="#/app/violations">
+        <ion-item menu-close href="#/app/violations" class="test-side-item">
           Violations
         </ion-item>
-        <ion-item menu-close href="#/app/warrants">
+        <ion-item menu-close href="#/app/warrants" class="test-side-item">
           Warrants
         </ion-item>
-        <ion-item menu-close href="#/app/pay">
+        <ion-item menu-close href="#/app/pay" class="test-side-item">
           Pay Fines
         </ion-item>
       </ion-list>
